<resources>
    <string name="app_name">OceanTech Tracking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">News</string>
    <string name="menu_nearest_medical">Nearest Medical</string>
    <string name="menu_feedback">Feedback</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_news">News</string>
    <string name="feedback_to_app">App feedback</string>
    <string name="feedback_description">Please enter your feedback below to help make our app even better !</string>
    <string name="feedback_hint">Your feedback ...</string>
    <string name="send_feedback">Send feedback</string>
    <string name="warning">Cảnh báo bệnh truyền nhiễm</string>
    <string name="loggin">Loggin</string>
    <string name="lable_signing">Don\'t have account? <font color="#3F51B5"><b> Register</b></font></string>
    <string name="forget_password">Don\'t remember password?</string>
    <string name="channel_description">Notification</string>
    <string name="category_theme">News topic</string>
    <string name="home_everyone">Let\'s all work together to prevent dengue fever !</string>
    <string name="home_button">Dengue News</string>
    <string name="info_app">Thông tin ứng dụng</string>
    <string name="privacy">Dengue alert is a proactive alert application supporting people detect and avoid exposure to risk factors for dengue infection. At the same time, the application aslo provides necessary information on the causative agnet, measures and the nearest medical facilities to the people.</string>
    <string name="note">Dengue Alert does not store or collect user location data.</string>
    <string name="accept_use">Agree to use</string>
    <string name="title_category">Bệnh sốt xuất huyết</string>
    <string name="retry">Thử lại</string>
    <string name="no_location_text">No location</string>
    <string name="ok">Ok</string>
    <string name="permission_rationale">permission rationale</string>
    <string name="permission_denied_explanation">permission denied explanation</string>
    <string name="settings">Settings</string>
    <string name="warning_dengue">Ứng dụng đang quét các ổ dịch xung quanh bạn !</string>
    <string name="password">Password</string>
    <string name="email">Email <font color="red">*</font></string>
    <string name="send">Send</string>
    <string name="signin">Register a new account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="display_name">Display name</string>
    <string name="username">User name</string>
    <string name="signin_account">Sign in</string>
    <string name="login_fail">User name or password is incorect</string>
    <string name="login_success">Loggin successfully.</string>
    <string name="username_not_empty">This field not empty.</string>
    <string name="has_dengue">⛔ Bạn đang ở trong phạm vi có nguy cơ nhiễm Sốt xuất huyết !</string>
    <string name="content_new">News content</string>
    <string name="by_outhor">by author</string>
    <string name="view_count">" %1$s View"</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open setting</string>
    <string name="gps_network_not_enabled">Application must be use your location tp play the current and warning the center of the services.</string>
    <string name="close">Close</string>
    <string name="need_network">The Dengue Alert app needs to use mobile data to detect outbreaks around. You need to anable mobile data or Wifi in the settings.</string>
    <string name="account">User name</string>
    <string name="received">We have received your feedback</string>
    <string name="exit">Exit</string>
    <string name="no_dengue">🛡 Bạn đã ở ngoài phạm vi có nguy cơ nhiễm Sốt xuất huyết</string>
    <string name="at">at</string>
    <string name="feedback_empty">Vui lòng nhập phản hồi của bạn.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Birthday</string>
    <string name="university">University</string>
    <string name="year">Year</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_birthday">Enter birthday!!!</string>
    <string name="txtCountDays">Checkin days: %d, Tracking days: %d</string>
    <string name="blog">Blog</string>
    <string name="personal_info">Personal Info</string>
    <string name="welcome">Welcome, %s</string>
    <string name="logout">Logout</string>
    <string name="users">Users</string>
    <string name="checkin">Check in</string>
    <string name="checked">Checked</string>
    <string name="unknown">Unknown</string>
    <string name="show_password">Show password</string>
    <string name="no_notification">You don\'t have notifications now...</string>
    <string name="notifications">Notifications</string>
    <string name="personal_information">Personal Information</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="account_information">Account Information</string>
    <string name="save">Save</string>
    <string name="count_comment">%d comment</string>
    <string name="count_comments">%d comments</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="count_like">%d like</string>
    <string name="count_likes">%d likes</string>
    <string name="noComments">Don\'t have any comments now...</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="block">Block</string>
    <string name="login_session_expired">Login session expired</string>
    <string name="login_session_expired_content">Your login session has expired. Please log in again!</string>
</resources>